[gd_scene load_steps=17 format=3 uid="uid://d3rp8trfaao5l"]

[ext_resource type="Script" path="res://Scenes/Attacks/PriestAttack/PriestAttack.gd" id="1_ob4jc"]
[ext_resource type="Texture2D" uid="uid://dlivpfjjuhlhg" path="res://Art/MagicAttack2x2-Sheet.png" id="2_hwtbl"]
[ext_resource type="Texture2D" uid="uid://g8ip6uceaa12" path="res://Art/HolyAttack-Sheet.png" id="3_eel36"]
[ext_resource type="AudioStream" uid="uid://d3ysx1pfpavuk" path="res://SFX/Priest_heal_v1.wav" id="4_0qhho"]
[ext_resource type="AudioStream" uid="uid://da3npdaidwhkg" path="res://SFX/Mage_spell_cast_v1.wav" id="5_buodd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w3hqt"]
radius = 7.0
height = 28.0

[sub_resource type="AtlasTexture" id="AtlasTexture_8ymvn"]
atlas = ExtResource("3_eel36")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pr73s"]
atlas = ExtResource("3_eel36")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_agij2"]
atlas = ExtResource("3_eel36")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uo1co"]
atlas = ExtResource("2_hwtbl")
region = Rect2(0, 0, 28, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_vohte"]
atlas = ExtResource("2_hwtbl")
region = Rect2(28, 0, 28, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_kisgf"]
atlas = ExtResource("2_hwtbl")
region = Rect2(56, 0, 28, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgn8g"]
atlas = ExtResource("2_hwtbl")
region = Rect2(0, 22, 28, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vmcy"]
atlas = ExtResource("2_hwtbl")
region = Rect2(28, 22, 28, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_keqdw"]
atlas = ExtResource("2_hwtbl")
region = Rect2(56, 22, 28, 22)

[sub_resource type="SpriteFrames" id="SpriteFrames_q78e8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ymvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pr73s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agij2")
}],
"loop": false,
"name": &"HolySpell",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uo1co")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vohte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kisgf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgn8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vmcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_keqdw")
}],
"loop": true,
"name": &"Spell",
"speed": 5.0
}]

[node name="PriestAttack" type="Area2D"]
z_index = 1
script = ExtResource("1_ob4jc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_w3hqt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 9)
sprite_frames = SubResource("SpriteFrames_q78e8")
animation = &"HolySpell"
autoplay = "HolySpell"

[node name="Priest_spell_hit_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_0qhho")

[node name="Spell_cast_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_buodd")

[node name="Priest_spell_cast" type="AkEvent2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
